# gfast-copy

./: README.rst  README.rst~
gfast-copy-1.0/: AUTHORS  CONTRIBUTORS  ChangeLog  HACKME  Makefile.am  Makefile.in  Makefile.mk  README  THANKS  TODO  WHOAMI  config.h.in  configure  configure.ac  whoami.info
gfast-copy-1.0/MACOSX/: Makefile.am  Makefile.in
gfast-copy-1.0/MACOSX/gfast-copy_app/Contents/: Info.plist
gfast-copy-1.0/MACOSX/gfast-copy_app/Contents/Resources/: gfast-copy.icns
gfast-copy-1.0/data/: Makefile.am  Makefile.in
gfast-copy-1.0/data/README/html/: index.html  objects.inv
gfast-copy-1.0/data/README/html/_sources/: fast-copy.rst.txt  gfast-copy.rst.txt  index.rst.txt
gfast-copy-1.0/desktop/: Makefile.am  Makefile.in
gfast-copy-1.0/doc/: Makefile.am  Makefile.in  gfast-copy.html
gfast-copy-1.0/fast-copy/: Makefile.am  Makefile.in  fast-copy.c
gfast-copy-1.0/man_fast-copy/: Makefile.am  Makefile.in  fast-copy.1
gfast-copy-1.0/man_gfast-copy/: Makefile.am  Makefile.in  gfast-copy.1
gfast-copy-1.0/src/: GtkSmartIconButton.c  GtkSmartIconButton.h  GtkSmartMenuItem.c  GtkSmartMenuItem.h  Makefile.am  Makefile.in  callbacks.c  callbacks.h  configuration.c  configuration.h  copy_files.c  copy_files.h  documentation.c  documentation.h  global_vars.c  global_vars.h  main.c
gfast-copy-1.0/src/headers/: defines.h  includes.h
gfast-copy-1.0/texi/: Makefile.am  Makefile.in  gfast-copy.info  gfast-copy.texi
