nobase_dist_pkgdata_DATA    = ./images/icons/16x16/folder-sync.png \
                              ./images/icons/16x16/preferences-theme-light.png \
                              ./images/icons/16x16/folder-downloads.png \
                              ./images/icons/16x16/folder-locked.png \
                              ./images/icons/16x16/preferences-theme-dark.png \
                              ./images/icons/16x16/help-contents.png \
                              ./images/icons/16x16/help-about.png \
                              ./images/icons/16x16/gfast-copy_icon.png \
                              ./images/icons/16x16/run-build-configure.png \
                              ./images/icons/16x16/folder-development.png \
                              ./images/icons/16x16/application-exit.png \
                              ./images/icons/16x16/folder-new.png \
                              ./images/icons/16x16/system-help.png \
                              ./images/icons/22x22/folder-sync.png \
                              ./images/icons/22x22/folder-downloads.png \
                              ./images/icons/22x22/folder-important.png \
                              ./images/icons/22x22/folder-temp.png \
                              ./images/icons/22x22/folder-new.png \
                              ./images/gfast-copy_icon.png \
                              ./license/gpl.txt \
                              ./README/html/_sources/fast-copy.rst.txt \
                              ./README/html/_sources/gfast-copy.rst.txt \
                              ./README/html/_sources/index.rst.txt \
                              ./README/html/objects.inv \
                              ./README/html/_static/searchtools.js \
                              ./README/html/_static/haiku.css \
                              ./README/html/_static/bg-page.png \
                              ./README/html/_static/basic.css \
                              ./README/html/_static/file.png \
                              ./README/html/_static/down.png \
                              ./README/html/_static/doctools.js \
                              ./README/html/_static/up.png \
                              ./README/html/_static/down-pressed.png \
                              ./README/html/_static/ajax-loader.gif \
                              ./README/html/_static/alert_warning_32.png \
                              ./README/html/_static/gfast-copy_icon.png \
                              ./README/html/_static/up-pressed.png \
                              ./README/html/_static/comment-bright.png \
                              ./README/html/_static/comment.png \
                              ./README/html/_static/pygments.css \
                              ./README/html/_static/jquery.js \
                              ./README/html/_static/underscore.js \
                              ./README/html/_static/alert_info_32.png \
                              ./README/html/_static/comment-close.png \
                              ./README/html/_static/websupport.js \
                              ./README/html/_static/minus.png \
                              ./README/html/_static/bullet_orange.png \
                              ./README/html/_static/plus.png \
                              ./README/html/index.html \
                              ./README/html/.buildinfo \
                              ./README/html/.nojekyll

                                                          


